<resources>
    <string name="about_phone">About phone</string>
    <string name="accessibility_assist_gesture_complete_or_keep_adjusting">Active Edge set up. Go to the next screen or keep adjusting.</string>
    <string name="accessibility_keyboard_haptics_title">Keyboard haptics</string>
    <string name="account_confirmation_class">com.google.android.gms.auth.uiflows.factoryreset.PreFactoryResetActivity</string>
    <string name="account_confirmation_package">com.google.android.gms</string>
    <string name="account_type">com.google</string>
    <string name="adaptive_charging">Adaptive Charging</string>
    <string name="adaptive_charging_description">Extend battery lifespan by charging steadily during longer charging periods. Activated based on your usage cycle.</string>
    <string name="adaptive_charging_time_estimate">Adaptive charging • Full by %1$s</string>
    <string name="add_bypassed_application_hint">No apps added</string>
    <string name="advanced_vpn_preference_group_title">Built-in</string>
    <string name="all_apps_category_title">All apps</string>
    <string name="ambient_display_wake_screen_footer">Preferences</string>
    <string name="ambient_display_wake_screen_summary"/>
    <string name="ambient_display_wake_screen_summary_on"/>
    <string name="app_and_notification_dashboard_summary">Assistant, recent apps, default apps</string>
    <string name="assist_gesture_enrollment_continue_to_assistant">Continue to Assistant</string>
    <string name="assist_gesture_enrollment_do_it_later">Do it later</string>
    <string name="assist_gesture_enrollment_seekbar_light">Light squeeze</string>
    <string name="assist_gesture_enrollment_seekbar_strong">Firm squeeze</string>
    <string name="assist_gesture_enrollment_settings">Settings</string>
    <string name="assist_gesture_setting_enable_assistant_text">To talk to your Assistant, quickly squeeze the bottom half of your phone, then release</string>
    <string name="assist_gesture_setting_enable_assistant_title">Squeeze for your Assistant</string>
    <string name="assist_gesture_setting_enable_ring_alarm_silence_text">Squeeze to silence alarms, timers, notifications, and incoming calls</string>
    <string name="assist_gesture_setting_enable_ring_silence_text">Squeeze to silence notifications and incoming calls</string>
    <string name="assist_gesture_setting_enable_ring_silence_title">Squeeze to silence phone</string>
    <string name="assist_gesture_setting_enable_wake_title">Open Assistant when screen is off</string>
    <string name="assist_gesture_squeeze_help_maximum_sensitivity">Light squeeze</string>
    <string name="assist_gesture_squeeze_help_minimum_sensitivity">Firm squeeze</string>
    <string name="assist_gesture_squeeze_sensitivity_label">Squeeze sensitivity</string>
    <string name="assist_gesture_title">Active Edge</string>
    <string name="assist_gesture_training_enrolling_error_may_cause_falsing">May bring up Assistant accidentally</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_bottom">Squeeze the bottom half of your phone</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_faster">Squeeze faster</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_harder">Squeeze harder</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_release_quickly">Squeeze quickly and then release</string>
    <string name="assist_gesture_training_enrolling_error_try_adjusting">Try adjusting the slider</string>
    <string name="assist_gesture_training_enrolling_text">Squeeze the bottom half of your phone. You can adjust how strongly you need to squeeze.</string>
    <string name="assist_gesture_training_enrolling_title">Squeeze quickly and release</string>
    <string name="assist_gesture_training_finished_text">You can also change the squeeze sensitivity later in Settings</string>
    <string name="assist_gesture_training_finished_title">Finish up or keep adjusting</string>
    <string name="assist_gesture_training_intro_text">To talk to your Assistant at any time, quickly squeeze the bottom half of your phone, then release</string>
    <string name="assist_gesture_training_intro_title">Squeeze for your Assistant</string>
    <string name="assist_gesture_training_suggestion_summary_including_alarms">Talk to Assistant, silence alarms and calls</string>
    <string name="assist_gesture_training_suggestion_summary">Talk to Assistant, silence calls</string>
    <string name="assist_gesture_training_suggestion_title">Squeeze and release for Assistant</string>
    <string name="automatic_storage_manager_activation_warning">When you\'re connected, you can still access photos and videos at the quality you selected for backup</string>
    <string name="automatic_storage_manager_days_title">Remove backed up photos &amp; videos</string>
    <string name="automatic_storage_manager_deactivation_warning">Turn off Smart Storage? \n\nSmart Storage won\'t free up space when your storage is almost full.</string>
    <string name="automatic_storage_manager_downloads_days_title">Backed up downloads</string>
    <string name="automatic_storage_manager_preference_title">Smart Storage</string>
    <string name="automatic_storage_manager_primary_switch_title">Use Smart Storage</string>
    <string name="automatic_storage_manager_settings">Smart Storage</string>
    <string name="automatic_storage_manager_text">When storage is almost full, remove backed up photos and videos. You can still find them in Google Photos.</string>
    <string name="aware_category_display"/>
    <string name="aware_category_gesture"/>
    <string name="aware_category_security"/>
    <string name="aware_disabled_preference_action">Turn on</string>
    <string name="aware_disabled_preference_dialog_content" />
    <string name="aware_disabled_preference_dialog_title" />
    <string name="aware_disabled_preference_neutral">Not now</string>
    <string name="aware_display_settings_title">Idle lock screen</string>
    <string name="aware_footer_when_airplane_batterysaver_on">Motion Sense is unavailable because airplane mode and Battery Saver are on</string>
    <string name="aware_footer_when_airplane_on">Motion Sense is unavailable because airplane mode is on</string>
    <string name="aware_footer_when_batterysaver_on">Motion Sense is unavailable because Battery Saver is on</string>
    <string name="aware_gesture_summary_off">Quick Gestures on, Active Edge turned off</string>
    <string name="aware_gesture_summary_on_non_assist">Quick Gestures on, Active Edge turned on</string>
    <string name="aware_gesture_summary_on_with_assist">Quick Gestures on, Active Edge on, squeeze for your Assistant</string>
    <string name="aware_info_button_description">More settings</string>
    <string name="aware_settings_description"/>
    <string name="aware_settings_disabled_info_dialog_content"/>
    <string name="aware_settings_disabled_info_dialog_title"/>
    <string name="aware_settings_enabled_info_dialog_content"/>
    <string name="aware_settings_enabled_info_dialog_title"/>
    <string name="aware_settings_suggestion_summary"/>
    <string name="aware_settings_suggestion_title"/>
    <string name="aware_settings_summary"/>
    <string name="aware_settings_title">Aware Settings</string>
    <string name="aware_summary_when_airplane_batterysaver_on">Unavailable because airplane mode and Battery Saver are on</string>
    <string name="aware_summary_when_airplane_on">Unavailable because airplane mode is on</string>
    <string name="aware_summary_when_batterysaver_on">Unavailable because Battery Saver is on</string>
    <string name="aware_wake_display_summary"/>
    <string name="aware_wake_display_summary_aod_off"/>
    <string name="aware_wake_display_title"/>
    <string name="backup_suggestion_cancel">Cancel</string>
    <string name="clear_calling_footer">Clear calling is available depending on your Wi‑Fi and mobile network connection. Content from your call is not sent to Google.</string>
    <string name="clear_calling_title">Clear calling</string>
    <string name="clear_calling_toggle">Use clear calling</string>
    <string name="clear_calling_topintro">Reduces background noises during calls</string>
    <string name="columbus_gesture_training_action_title">Choose Quick Tap option</string>
    <string name="columbus_setting_action_assistant_title">Access your digital assistant</string>
    <string name="columbus_setting_action_assistant_value">assistant</string>
    <string name="columbus_setting_action_launch_title">Open app</string>
    <string name="columbus_setting_action_launch_value">launch</string>
    <string name="columbus_setting_action_notification_title">Show notifications</string>
    <string name="columbus_setting_action_notification_value">notifications</string>
    <string name="columbus_setting_action_overview_title">See recent apps</string>
    <string name="columbus_setting_action_overview_value">overview</string>
    <string name="columbus_setting_action_play_pause_title">Play or pause media</string>
    <string name="columbus_setting_action_play_pause_value">media</string>
    <string name="columbus_setting_action_screenshot_title">Take screenshot</string>
    <string name="columbus_setting_action_screenshot_value">screenshot</string>
    <string name="columbus_setting_actions_title">Tap back of phone twice to</string>
    <string name="columbus_setting_additional_settings_title">Quick Tap strength</string>
    <string name="columbus_setting_enable_switch_title">Use Quick Tap</string>
    <string name="columbus_setting_sensitivity_title">Require stronger taps</string>
    <string name="columbus_title">Quick Tap to start actions</string>
    <string name="gesture_skip_direction_title">Skip Direction</string>
    <string name="gesture_skip_footer">Preferences</string>
    <string name="gesture_skip_summary"/>
    <string name="gesture_skip_title">Skip gesture</string>
    <string name="keywords_assist_gesture_launch">gesture, edge, side, active edge, squeeze, grip, assist, assistant, squeeze, ok google, google assistant</string>
    <string name="keywords_assist_gesture_silence">gesture, edge, side, active edge, silence, snooze, alarm, incoming call, quiet, display, lockscreen, squeeze, grip, stop</string>
    <string name="keywords_assist_gesture_wake">gesture, edge, side, active edge, wake, notifications, screen, display, screen off, screen on, squeeze, asleep, sleep, grip</string>
    <string name="keywords_battery_share">battery share, wireless charging</string>
    <string name="keywords_gesture_skip"/>
    <string name="keywords_reverse_charging_stop_threshold">Stop sharing battery when phone reaches:</string>
    <string name="keywords_wake_display"/>
    <string name="reverse_charging_auto_turn_on_subtitle">Will turn on automatically for a short period when your phone is plugged into a charger</string>
    <string name="reverse_charging_auto_turn_on_title">Turn on automatically</string>
    <string name="reverse_charging_detail_footer_title_advanced">Battery Share works with compatible ear buds, phones, and more.\n\nYour phone’s battery will run out faster when using this feature. Battery Share automatically turns off after a few minutes if another device isn’t detected. For better charging, remove your phone’s case and other items that may interfere, like metal objects.</string>
    <string name="reverse_charging_main_switch">Use Battery Share</string>
    <string name="reverse_charging_switch_title">Charge other devices by placing them on the back of your Pixel</string>
    <string name="reverse_charging_title">Battery Share</string>
    <string name="vpn_bypass_category_title">Don\'t use VPN for these apps</string>
    <string name="vpn_bypass_description">You can allow some apps to ignore the VPN and use your phone\'s regular network connection</string>
</resources>