<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Benzo Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:icon="@drawable/ic_quick_tap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:sucHeaderText="@string/columbus_gesture_training_action_title">

    <RadioGroup
        android:id="@+id/actions"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame">

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_screenshot_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_screenshot_value"/>

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_assistant_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_assistant_value"/>

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_play_pause_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_play_pause_value"/>

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_overview_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_overview_value"/>

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_notification_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_notification_value"/>

        <com.google.android.settings.gestures.columbus.ColumbusRadioButton
            android:id="@+id/launch"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/columbus_setting_action_launch_title"
            android:paddingHorizontal="@dimen/columbus_list_item_text_spacing"
            android:paddingVertical="@dimen/columbus_action_list_item_spacing_vertical"
            app:secureValue="@string/columbus_setting_action_launch_value"/>

    </RadioGroup>
</com.google.android.setupdesign.GlifLayout>
