<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Benzo Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/reverse_charging_title"
    settings:keywords="@string/keywords_battery_share">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="reverse_charging_switch"
        android:title="@string/reverse_charging_main_switch"
        settings:controller="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingSwitchPreferenceController"
        settings:allowDividerBelow="false"/>

    <com.android.settingslib.widget.TopIntroPreference
        android:key="reverse_charging_summary"
        android:title="@string/reverse_charging_switch_title"
        settings:controller="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingTopIntroController"
        settings:allowDividerBelow="true"/>

    <com.android.settingslib.widget.IllustrationPreference
        android:key="reverse_charging_illustration"
        android:selectable="false"
        settings:lottie_rawRes="@raw/lottie_reverse_charging"/>

    <com.google.android.settings.fuelgauge.reversecharging.ReverseChargingSeekBarPreference
        android:key="reverse_charging_seek_bar"
        android:icon="@drawable/ic_reverse_charging"
        android:title="@string/keywords_reverse_charging_stop_threshold"
        settings:controller="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingSeekBarController"/>

    <SwitchPreference
        android:key="reverse_charging_auto_turn_on"
        android:title="@string/reverse_charging_auto_turn_on_title"
        android:summary="@string/reverse_charging_auto_turn_on_subtitle"
        settings:controller="com.google.android.settings.fuelgauge.reversecharging.ReverseChargingAutoTurnOnSwitchPreferenceController"/>

    <com.android.settingslib.widget.FooterPreference
        android:key="reverse_charging_detail_footer"
        android:title="@string/reverse_charging_detail_footer_title_advanced"
        android:selectable="false"
        settings:searchable="false"/>
</PreferenceScreen>
