<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Benzo Rom

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textSize="@dimen/app_bypass_description_text_font_size"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpn_bypass_description"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"
            android:layout_marginEnd="@dimen/app_bypass_default_margin_end"/>

        <TextView
            android:id="@+id/enabled_apps_header_text"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_bypass_enabled_app_title_margin_top"
            android:layout_marginBottom="@dimen/app_bypass_candidate_app_title_margin_bottom"
            android:text="@string/vpn_bypass_category_title"
            android:singleLine="true"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"/>

        <TextView
            android:id="@+id/enabled_apps_hint_text"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textSize="@dimen/app_bypass_second_text_font_size"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_bypass_enabled_app_hint_margin_bottom"
            android:text="@string/add_bypassed_application_hint"
            android:singleLine="true"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/enabled_apps_list"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_bypass_enabled_app_list_margin_bottom"
            android:overScrollMode="never"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"/>

        <View
            android:background="?android:attr/listDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/candidate_apps_header_text"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:textColor="?android:attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_bypass_candidate_app_title_margin_top"
            android:layout_marginBottom="@dimen/app_bypass_candidate_app_title_margin_bottom"
            android:text="@string/all_apps_category_title"
            android:singleLine="true"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/candidate_apps_list"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:layout_marginStart="@dimen/app_bypass_default_margin_start"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
